Migrated the remaining gangland-impl sources onto Keystone
Bootstrap services, configuration classes, data managers, listeners, items, loot chests,
scoreboard, signs and weapon wiring now import bean, util, timer, item, persistence,
economy and exception classes from Keystone. DebugLoggingConfig constructs Keystone's
DebugLoggingInitializer with Gangland's base package and classloader so empty Debug.Modules
auto-discovery scans this plugin's module.properties. The datastructure tests point at
Keystone's JsonFormatter and Tree.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SL2fpNXStRsn21A3zwDXBk